--- a/pweb2/LAB02/LAB02.html
+++ b/pweb2/LAB02/LAB02.html
@@ -2,11 +2,15 @@
 <html>
 	<body>
 
-		<h2>What Can JavaScript Do?</h2>
+		<h1>Ejercicio 2</h1><br>
 
-		<p id="demo">JavaScript can change HTML content.</p>
+		<label>Texto a invertir: </label>
 
-		<button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
+		<input type="text"/>
+
+		<h3 id='Cad'><h3>
+
+		<button type="button" onclick='document.getElementById("Cad").innerHTML = "Cambio"'>Invertir</button>
 
 	</body>
 </html>
