Probar ejercicio2.js cadena invertida

--- a/pweb2/LAB02/LAB02.html
+++ b/pweb2/LAB02/LAB02.html
@@ -13,7 +13,7 @@
 
 		<h3 id='Cad'><h3>
 
-		<button type="button" onclick='document.getElementById("Cad").innerHTML = "Cambio"'>Invertir</button>
+		<button type="button" onclick='document.getElementById("Cad").innerHTML = ".ejercicio2.js"'>Invertir</button>
 
 	</body>
 </html>
