--- a/pweb2/LAB02/LAB02.html
+++ b/pweb2/LAB02/LAB02.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<script src="ejercicio1.js"></script>
+		<script src="ejercicio2.js"></script>
 	</head>
 	<body>
 
@@ -13,7 +15,7 @@
 
 		<h3 id='Cad'><h3>
 
-		<button type="button" onclick='document.getElementById("Cad").innerHTML = ".ejercicio2.js"'>Invertir</button>
+		<button type="button" onclick="invertir()">Invertir</button>
 
 	</body>
 </html>
