Probando extraer la fecha actual

--- a/pweb2/LAB02/LAB02.html
+++ b/pweb2/LAB02/LAB02.html
@@ -11,11 +11,11 @@
 
 		<label>Texto a invertir: </label>
 
-		<input type="text"/>
+		<input type="text" id="Cad"/>
 
-		<h3 id='Cad'><h3>
+		<h3 id='CadInv'><h3>
 
-		<button type="button" onclick="invertir()">Invertir</button>
+		<button type="button" onclick="invertir()" id="Invertir">Invertir</button>
 
 	</body>
 </html>
