--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -1,7 +1,8 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 	<head>
-		
+		<meta charset="UTF-8">
+		<title>LAB02</title>
 	</head>
 	<body>
 		<h2>Ejercicio 2</h2><br>
