HTML_2 0.3 insertando archivos .js

--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>LAB02</title>
+		<script src="ejercicio1.js"></script>
+		<script src="ejercicio2.js"></script>
 	</head>
 	<body>
 		<h2>Ejercicio 2</h2><br>
