--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -12,7 +12,7 @@
 			<label>Texto a invertir: </label>
 			<input type="text" id="cad">
 			<h3 id="nCad"></h3>
-			<button type="button" onclick="invertir()" id="invertir">Invertir</button>
+			<button type="button" onclick="invertir()">Invertir</button>
 		</form>
 	</body>
 </html>
