ejercicio3.js probando con console.log y enlazar lab02.html con este archivo

--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -5,14 +5,17 @@
 		<title>LAB02</title>
 		<script src="ejercicio1.js"></script>
 		<script src="ejercicio2.js"></script>
+		<script src="ejercicio3.js"></script>
 	</head>
 	<body>
-		<h2>Ejercicio 2</h2><br>
+		<h2>Ejercicio 2 : Invertir cadena</h2><br>
 		<form>
 			<label>Texto a invertir: </label>
 			<input type="text" id="cad">
 			<h3 id="nCad"></h3>
 			<button type="button" onclick="invertir()">Invertir</button>
-		</form>
+		</form><br>
+		<h2>Ejercicio 3 : ¿Cuántos días faltan para el día de Arequipa?</h2><br>
+		<input type="button" onclick="calcDiasAqp()" value="Calcular">
 	</body>
 </html>
