--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -15,7 +15,8 @@
 			<h3 id="nCad"></h3>
 			<button type="button" onclick="invertir()">Invertir</button>
 		</form><br>
-		<h2>Ejercicio 3 : ¿Cuántos días faltan para el día de Arequipa?</h2><br>
-		<input type="button" onclick="calcDiasAqp()" value="Calcular">
+		<h2>Ejercicio 3 : ¿Cuántos días faltan para el día de Arequipa?</h2><br>	
+			<h3 id="nDias"></h3>
+			<input type="button" onclick="calcDiasAqp()" value="Calcular">
 	</body>
 </html>
