--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -6,6 +6,7 @@
 		<script src="ejercicio1.js"></script>
 		<script src="ejercicio2.js"></script>
 		<script src="ejercicio3.js"></script>
+		<script src="ejercicio4.js"></script>
 	</head>
 	<body>
 		<h2>Ejercicio 2 : Invertir cadena</h2><br>
