HTML_2 0.6 añadí ejercicio 4 form

--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -16,8 +16,18 @@
 			<h3 id="nCad"></h3>
 			<button type="button" onclick="invertir()">Invertir</button>
 		</form><br>
+
 		<h2>Ejercicio 3 : ¿Cuántos días faltan para el día de Arequipa?</h2>
 		<h3 id="nDias"></h3>
-			<input type="button" onclick="calcDiasAqp()" value="Calcular">
+			<input type="button" onclick="calcDiasAqp()" value="Calcular"><br>
+
+		<h2>Ejercicio 4 : Devolver código de meet sin guiones</h2>
+		<form>
+			<label>URL de sesión meet (1): </label><input type="text" id="url1">
+			<label>URL de sesión meet (2): </label><input type="text" id="url2">
+			<h3 id="sinG1"></h3>
+			<h3 id="sinG2"></h3>
+			<input type="button" onclick="quitarG()" value="Convertir">
+		</form>
 	</body>
 </html>
