Ejericicio4.js editado para recibir dos URL

--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -23,7 +23,7 @@
 
 		<h2>Ejercicio 4 : Devolver código de meet sin guiones</h2>
 		<form>
-			<label>URL de sesión meet (1): </label><input type="text" id="url1">
+			<label>URL de sesión meet (1): </label><input type="text" id="url1"><br>
 			<label>URL de sesión meet (2): </label><input type="text" id="url2">
 			<h3 id="sinG1"></h3>
 			<h3 id="sinG2"></h3>
