--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -9,6 +9,8 @@
 		<script src="ejercicio4.js"></script>
 	</head>
 	<body>
+		<h2>Ejercicio 1 : Día según número (Consola)</h2>
+
 		<h2>Ejercicio 2 : Invertir cadena</h2><br>
 		<form>
 			<label>Texto a invertir: </label>
