--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -30,6 +30,16 @@
 			<h3 id="sinG1"></h3>
 			<h3 id="sinG2"></h3>
 			<input type="button" onclick="quitarG()" value="Convertir">
+
+		<h2>Ejercicio 5 : Tabla dinámica</h2>
+		<form>
+			<label>Ingrese el número de elementos: </label>
+			<input type="button" onclick="recibeNVal()" value="Enviar"><h3 id="nVal"></h3>
+			<input type="button" onclick="armaTab()" value="Armar tabla con valores">
+			<table id="tabla">
+				
+			</table>
+		</form>
 		</form>
 	</body>
 </html>
