HTML_2 0.7 Enganchando con ejercicio5.js

--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -7,6 +7,7 @@
 		<script src="ejercicio2.js"></script>
 		<script src="ejercicio3.js"></script>
 		<script src="ejercicio4.js"></script>
+		<script src="ejercicio5.js"></script>
 	</head>
 	<body>
 		<h2>Ejercicio 1 : Día según número (Consola)</h2>
@@ -34,7 +35,8 @@
 		<h2>Ejercicio 5 : Tabla dinámica</h2>
 		<form>
 			<label>Ingrese el número de elementos: </label>
-			<input type="button" onclick="recibeNVal()" value="Enviar"><h3 id="nVal"></h3>
+			<input type="button" onclick="generarDimensiones()" value="Enviar">
+			<h3 id="nVal"></h3>
 			<input type="button" onclick="armaTab()" value="Armar tabla con valores">
 			<table id="tabla">
 				
