ejercicio5.js pruebas exitosas de dimensión

--- a/pweb2/LAB02/lab02.html
+++ b/pweb2/LAB02/lab02.html
@@ -35,6 +35,7 @@
 		<h2>Ejercicio 5 : Tabla dinámica</h2>
 		<form>
 			<label>Ingrese el número de elementos: </label>
+			<input type="text" id="n">
 			<input type="button" onclick="generarDimensiones()" value="Enviar">
 			<h3 id="nVal"></h3>
 			<input type="button" onclick="armaTab()" value="Armar tabla con valores">
